--- a/Creating dataset.ipynb
+++ b/Creating dataset.ipynb
@@ -953,7 +953,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sample 100,000 reviews"
+    "### 2. Sample 100,000 reviews"
    ]
   },
   {
@@ -994,286 +994,6 @@
     "        \"data/big_rating_all.csv\",\n",
     "        index=False,\n",
     "        columns=['reviewText', 'overall'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        overall  verified   reviewTime      reviewerID        asin  \\\n",
-      "387757      5.0      True  04 21, 2015  A1VKN08GGRWRRO  B00RSXRLUE   \n",
-      "4516        4.0     False   08 3, 2010  A33I2QV713UCT5  B00001IVRD   \n",
-      "3624        4.0     False  08 27, 2010  A3PGCMI33A04AZ  B00000K1VE   \n",
-      "\n",
-      "          reviewerName                                         reviewText  \\\n",
-      "387757       Lucy Fair  Works perfectly with both official and third-p...   \n",
-      "4516               RAF  I've enjoyed StarCraft ever since it came out....   \n",
-      "3624    Mohammad Jaber  Nope.... the title of my review IS NOT mislead...   \n",
-      "\n",
-      "                                                  summary  unixReviewTime  \\\n",
-      "387757                                         Five Stars      1429574400   \n",
-      "4516    There's a reason that it's one of the most cel...      1280793600   \n",
-      "3624    Not quiet RE2 but hey, it sure had a better pl...      1282867200   \n",
-      "\n",
-      "       vote  ... style.Package Type: style.Package Quantity:  \\\n",
-      "387757  NaN  ...                 NaN                     NaN   \n",
-      "4516    NaN  ...                 NaN                     NaN   \n",
-      "3624    NaN  ...                 NaN                     NaN   \n",
-      "\n",
-      "       style.Item Package Quantity: style.Pattern:  \\\n",
-      "387757                          NaN            NaN   \n",
-      "4516                            NaN            NaN   \n",
-      "3624                            NaN            NaN   \n",
-      "\n",
-      "       style.Platform for Display: style.Style Name: style.Denomination:  \\\n",
-      "387757                         NaN               NaN                 NaN   \n",
-      "4516                           NaN               NaN                 NaN   \n",
-      "3624                           NaN               NaN                 NaN   \n",
-      "\n",
-      "       style.Offer Type: style.Configuration: style.Color Name:  \n",
-      "387757               NaN                  NaN               NaN  \n",
-      "4516                 NaN                  NaN               NaN  \n",
-      "3624                 NaN                  NaN               NaN  \n",
-      "\n",
-      "[3 rows x 30 columns]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>overall</th>\n",
-       "      <th>verified</th>\n",
-       "      <th>reviewTime</th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>asin</th>\n",
-       "      <th>reviewerName</th>\n",
-       "      <th>reviewText</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>unixReviewTime</th>\n",
-       "      <th>vote</th>\n",
-       "      <th>...</th>\n",
-       "      <th>style.Package Type:</th>\n",
-       "      <th>style.Package Quantity:</th>\n",
-       "      <th>style.Item Package Quantity:</th>\n",
-       "      <th>style.Pattern:</th>\n",
-       "      <th>style.Platform for Display:</th>\n",
-       "      <th>style.Style Name:</th>\n",
-       "      <th>style.Denomination:</th>\n",
-       "      <th>style.Offer Type:</th>\n",
-       "      <th>style.Configuration:</th>\n",
-       "      <th>style.Color Name:</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10 17, 2015</td>\n",
-       "      <td>A1HP7NVNPFMA4N</td>\n",
-       "      <td>0700026657</td>\n",
-       "      <td>Ambrosia075</td>\n",
-       "      <td>This game is a bit hard to get the hang of, bu...</td>\n",
-       "      <td>but when you do it's great.</td>\n",
-       "      <td>1445040000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>07 27, 2015</td>\n",
-       "      <td>A1JGAP0185YJI6</td>\n",
-       "      <td>0700026657</td>\n",
-       "      <td>travis</td>\n",
-       "      <td>I played it a while but it was alright. The st...</td>\n",
-       "      <td>But in spite of that it was fun, I liked it</td>\n",
-       "      <td>1437955200</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>02 23, 2015</td>\n",
-       "      <td>A1YJWEXHQBWK2B</td>\n",
-       "      <td>0700026657</td>\n",
-       "      <td>Vincent G. Mezera</td>\n",
-       "      <td>ok game.</td>\n",
-       "      <td>Three Stars</td>\n",
-       "      <td>1424649600</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>02 20, 2015</td>\n",
-       "      <td>A2204E1TH211HT</td>\n",
-       "      <td>0700026657</td>\n",
-       "      <td>Grandma KR</td>\n",
-       "      <td>found the game a bit too complicated, not what...</td>\n",
-       "      <td>Two Stars</td>\n",
-       "      <td>1424390400</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>12 25, 2014</td>\n",
-       "      <td>A2RF5B5H74JLPE</td>\n",
-       "      <td>0700026657</td>\n",
-       "      <td>jon</td>\n",
-       "      <td>great game, I love it and have played it since...</td>\n",
-       "      <td>love this game</td>\n",
-       "      <td>1419465600</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   overall  verified   reviewTime      reviewerID        asin  \\\n",
-       "0      5.0      True  10 17, 2015  A1HP7NVNPFMA4N  0700026657   \n",
-       "1      4.0     False  07 27, 2015  A1JGAP0185YJI6  0700026657   \n",
-       "2      3.0      True  02 23, 2015  A1YJWEXHQBWK2B  0700026657   \n",
-       "3      2.0      True  02 20, 2015  A2204E1TH211HT  0700026657   \n",
-       "4      5.0      True  12 25, 2014  A2RF5B5H74JLPE  0700026657   \n",
-       "\n",
-       "        reviewerName                                         reviewText  \\\n",
-       "0        Ambrosia075  This game is a bit hard to get the hang of, bu...   \n",
-       "1             travis  I played it a while but it was alright. The st...   \n",
-       "2  Vincent G. Mezera                                           ok game.   \n",
-       "3         Grandma KR  found the game a bit too complicated, not what...   \n",
-       "4                jon  great game, I love it and have played it since...   \n",
-       "\n",
-       "                                       summary  unixReviewTime vote  ...  \\\n",
-       "0                  but when you do it's great.      1445040000  NaN  ...   \n",
-       "1  But in spite of that it was fun, I liked it      1437955200  NaN  ...   \n",
-       "2                                  Three Stars      1424649600  NaN  ...   \n",
-       "3                                    Two Stars      1424390400  NaN  ...   \n",
-       "4                               love this game      1419465600  NaN  ...   \n",
-       "\n",
-       "  style.Package Type: style.Package Quantity: style.Item Package Quantity:  \\\n",
-       "0                 NaN                     NaN                          NaN   \n",
-       "1                 NaN                     NaN                          NaN   \n",
-       "2                 NaN                     NaN                          NaN   \n",
-       "3                 NaN                     NaN                          NaN   \n",
-       "4                 NaN                     NaN                          NaN   \n",
-       "\n",
-       "  style.Pattern: style.Platform for Display: style.Style Name:  \\\n",
-       "0            NaN                         NaN               NaN   \n",
-       "1            NaN                         NaN               NaN   \n",
-       "2            NaN                         NaN               NaN   \n",
-       "3            NaN                         NaN               NaN   \n",
-       "4            NaN                         NaN               NaN   \n",
-       "\n",
-       "  style.Denomination: style.Offer Type: style.Configuration: style.Color Name:  \n",
-       "0                 NaN               NaN                  NaN               NaN  \n",
-       "1                 NaN               NaN                  NaN               NaN  \n",
-       "2                 NaN               NaN                  NaN               NaN  \n",
-       "3                 NaN               NaN                  NaN               NaN  \n",
-       "4                 NaN               NaN                  NaN               NaN  \n",
-       "\n",
-       "[5 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   },
   {
