--- a/3. Evaluate Dictionary-based Sentiment Analyzer.ipynb
+++ b/3. Evaluate Dictionary-based Sentiment Analyzer.ipynb
@@ -872,7 +872,7 @@
     }
    ],
    "source": [
-    "print(\"Classification report for sentiment analyzer classifier:\\n%s\\n\"\n",
+    "print('Classification report for sentiment analyzer classifier:\\n%s\\n'\n",
     "      % (metrics.classification_report(y_true, y_pred)))"
    ]
   },
@@ -1063,7 +1063,7 @@
     "df_cm.columns.name = 'Predicted'\n",
     "plt.figure(figsize = (10, 6))\n",
     "sn.set(font_scale=1.2) # for label size\n",
-    "sn.heatmap(df_cm, cmap=\"Blues\", annot=True, fmt='d', annot_kws={\"size\": 12}) # font size"
+    "sn.heatmap(df_cm, cmap='Blues', annot=True, fmt='d', annot_kws={'size': 12}) # font size"
    ]
   },
   {
